# cliffracer

./: .env.example  .gitignore  .zshrc_cliffracer  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.monitoring  Dockerfile.nats  Dockerfile.nats-extended  IMPLEMENTATION_STATUS.md  INSTALL.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  REFACTORING_PLAN.md  REORGANIZATION_COMPLETE.md  SECURITY.md  SECURITY_CHECKLIST.md  TYPING_STATUS.md  ZSHRC_SETUP.md  docker-compose-live-demo.yml  docker-compose-monitoring.yml  docker-compose.localstack.yml  docker-compose.modular.yml  docker-compose.yml  example_auth_patterns.py  example_client_generation.py  example_ecommerce_live.py  example_extended_services.py  example_full_aws_stack.py  fully_modular_service.py  logging_config.py  mkdocs.yml  nats_runner.py  nats_service.py  nats_service_extended.py  nats_service_logged.py  pyproject.toml  setup_live_demo.sh  (+2 more)
.github/: README.md
.github/workflows/: ci.yml  release.yml
deployment/docker/: .env.example  Dockerfile.lambda  docker-compose-live-demo.yml  docker-compose-nats.yml  docker-compose.localstack.yml  docker-compose.yml  init.sql
docs/: ARCHITECTURE.md  DEMO_RESULTS.md  README.md  api-reference.md  http-guide.md  index.md  localstack-integration.md  websocket-guide.md  why-cliffracer.md
docs/debugging/: README.md  backdoor.md
docs/development/: REFACTORING_PLAN.md  REORGANIZATION_PLAN.md
docs/getting-started/: installation.md  quickstart.md
docs/monitoring/: zabbix.md
docs/patterns/: saga.md
example_consumer/: README.md  pyproject.toml  simple_service.py
examples/: README.md  async-patterns.md  auth-patterns.md  backend-migration.md  basic-services.md  ecommerce-system.md  monitoring-setup.md
examples/advanced/: auth_patterns.py  aws_integration.py  extended_services.py  modular_services.py
examples/aws/: README.md  test_localstack_simple.py
examples/basic/: async_patterns.py  client_generation_example.py  simple_service.py
examples/consolidated/: README.md  new_architecture_example.py
examples/correlation/: README.md  correlation_example.py
examples/database/: user_service_with_db.py
examples/debugging/: backdoor_demo.py
examples/ecommerce/: README.md  demo_simple.py  main.py  run_simple_demo.py  test_system.py
examples/logging/: mixin_example.py
examples/monitoring/: metrics_exporter.py  send_metrics_to_zabbix.py
examples/saga/: __init__.py  banking_saga.py  order_saga.py  travel_saga.py
examples/timer/: README.md  timer_service_example.py  timer_with_metrics.py
examples/websocket/: notification_service.py  test_client.py
load-testing/: LOAD_TESTING_RESULTS.md  README.md  requirements.txt  simple_load_test.py  simple_test_service.py
load-testing/config/: test-config.yaml
load-testing/scripts/: generate-reports.sh  run-benchmarks.sh  start-test-services.sh
load-testing/services/cliffracer-services/: order_service.py
load-testing/shared/: __init__.py  generators.py  models.py
load-testing/tests/locust/: cliffracer_load_test.py
messaging/: __init__.py  aws_messaging.py
monitoring/: __init__.py  abstract_monitoring.py  cloudwatch_monitoring.py  metrics_service.py
monitoring/zabbix/agent/: nats_services.conf
runners/: __init__.py  abstract_runner.py  lambda_runner.py
scripts/: build_and_install.sh  generate_client.py  localstack-init.sh  refactor_class_names.py  setup_live_demo.sh
src/cliffracer/: __init__.py  abstract_messaging.py  abstract_monitoring.py  aws_messaging.py  client_generator.py  cloudwatch_monitoring.py  metrics_service.py  nats_messaging.py
src/cliffracer/auth/: __init__.py  framework.py  middleware.py  simple_auth.py
src/cliffracer/cli/: __init__.py  backdoor.py
src/cliffracer/core/: __init__.py  base_service.py  consolidated_service.py  correlation.py  decorators.py  exceptions.py  extended_service.py  high_performance_service.py  mixins.py  service_config.py  timer.py  validation.py
src/cliffracer/database/: __init__.py  connection.py  models.py  repository.py  secure_repository.py
src/cliffracer/debug/: __init__.py  backdoor.py  inspector.py
src/cliffracer/logging/: __init__.py  config.py  correlation_logging.py  logged_service.py  logging_mixin.py
src/cliffracer/middleware/: correlation.py
src/cliffracer/patterns/: __init__.py  saga.py
test_project/: README.md  my_service.py  pyproject.toml
tests/: conftest.py  test_correlation_propagation.py  test_saga_pattern.py
tests/integration/: test_database_integration.py  test_service_integration.py
tests/unit/: test_async_rpc.py  test_database.py  test_decorator_functionality.py  test_decorators.py  test_logging.py  test_messaging_patterns.py  test_service_base.py  test_service_config.py  test_service_lifecycle.py  test_timer.py  test_websocket.py
(+16 files in other folders)
